Ejercicios/TP2-MG/src/tp2/mg/TP2Parser.java
// Generated from /Users/gframirez/Documents/UBP/Q9/TC/Ejercicios/TP2-MG/src/tp2/mg/TP2.g4 by ANTLR 4.5.3
package tp2.mg;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TP2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, PA=3, PC=4, CA=5, CC=6, LA=7, LC=8, MAS=9, MENOS=10, 
		ASTERISCO=11, DIVISION=12, MODULO=13, MASMAS=14, MENOSMENOS=15, MASIGUAL=16, 
		MENOSIGUAL=17, PORIGUAL=18, BARRAIGUAL=19, MODULOIGUAL=20, IGUAL=21, AND=22, 
		OR=23, NOT=24, TRUE=25, FALSE=26, MAYOR=27, MENOR=28, IGUALIGUAL=29, DISTINTOIGUAL=30, 
		MAYORIGUAL=31, MENORIGUAL=32, INT=33, CHAR=34, DOUBLE=35, VOID=36, IF=37, 
		FOR=38, WHILE=39, COMILLAS=40, PUNTO=41, COMA=42, PUNTOYCOMA=43, RETURN=44, 
		THEN=45, ELSE=46, ID=47, NUMINT=48, CARACTER=49, VALORCHAR=50, NUMDOUBLE=51;
	public static final int
		RULE_prog = 0, RULE_instrucciones = 1, RULE_inst = 2, RULE_bloque = 3, 
		RULE_variables = 4, RULE_semi = 5, RULE_declaracionv = 6, RULE_tipovar = 7, 
		RULE_lista = 8, RULE_asignacion = 9, RULE_assignMode = 10, RULE_expresion = 11, 
		RULE_expSimple = 12, RULE_exprAND = 13, RULE_exprNOT = 14, RULE_exprRelacional = 15, 
		RULE_comparadores = 16, RULE_termino = 17, RULE_operadores = 18, RULE_factor = 19, 
		RULE_valores = 20, RULE_valorvar = 21, RULE_asignacionv = 22, RULE_tipofunc = 23, 
		RULE_parentesisAp = 24, RULE_deffunc = 25, RULE_declaracionfunc = 26, 
		RULE_definicion = 27, RULE_expresionDef = 28, RULE_expresionIF = 29, RULE_expresionWHILE = 30, 
		RULE_expresionFOR = 31, RULE_loopCtrl = 32, RULE_loopInit = 33, RULE_loopCond = 34, 
		RULE_loopIncr = 35, RULE_llamadafunc = 36, RULE_argumentos = 37, RULE_listaArgs = 38, 
		RULE_returnD = 39;
	public static final String[] ruleNames = {
		"prog", "instrucciones", "inst", "bloque", "variables", "semi", "declaracionv", 
		"tipovar", "lista", "asignacion", "assignMode", "expresion", "expSimple", 
		"exprAND", "exprNOT", "exprRelacional", "comparadores", "termino", "operadores", 
		"factor", "valores", "valorvar", "asignacionv", "tipofunc", "parentesisAp", 
		"deffunc", "declaracionfunc", "definicion", "expresionDef", "expresionIF", 
		"expresionWHILE", "expresionFOR", "loopCtrl", "loopInit", "loopCond", 
		"loopIncr", "llamadafunc", "argumentos", "listaArgs", "returnD"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='", 
		"'='", "'&&'", "'||'", "'!'", "'true'", "'false'", "'>'", "'<'", "'=='", 
		"'!='", "'>='", "'<='", "'int'", "'char'", "'double'", "'void'", "'if'", 
		"'for'", "'while'", "'\"'", "'.'", "','", "';'", "'return'", "'then'", 
		"'else'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "COMMENT", "PA", "PC", "CA", "CC", "LA", "LC", "MAS", "MENOS", 
		"ASTERISCO", "DIVISION", "MODULO", "MASMAS", "MENOSMENOS", "MASIGUAL", 
		"MENOSIGUAL", "PORIGUAL", "BARRAIGUAL", "MODULOIGUAL", "IGUAL", "AND", 
		"OR", "NOT", "TRUE", "FALSE", "MAYOR", "MENOR", "IGUALIGUAL", "DISTINTOIGUAL", 
		"MAYORIGUAL", "MENORIGUAL", "INT", "CHAR", "DOUBLE", "VOID", "IF", "FOR", 
		"WHILE", "COMILLAS", "PUNTO", "COMA", "PUNTOYCOMA", "RETURN", "THEN", 
		"ELSE", "ID", "NUMINT", "CARACTER", "VALORCHAR", "NUMDOUBLE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TP2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TP2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			instrucciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInstrucciones(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				inst();
				setState(83);
				instrucciones();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				bloque();
				setState(86);
				instrucciones();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public DeffuncContext deffunc() {
			return getRuleContext(DeffuncContext.class,0);
		}
		public LlamadafuncContext llamadafunc() {
			return getRuleContext(LlamadafuncContext.class,0);
		}
		public ReturnDContext returnD() {
			return getRuleContext(ReturnDContext.class,0);
		}
		public DefinicionContext definicion() {
			return getRuleContext(DefinicionContext.class,0);
		}
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitInst(this);
		}
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inst);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				variables();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				deffunc();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				llamadafunc();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				returnD();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(95);
				definicion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public TerminalNode LA() { return getToken(TP2Parser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TP2Parser.LC, 0); }
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterBloque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitBloque(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloque);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(LA);
			setState(99);
			instrucciones();
			setState(100);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public DeclaracionvContext declaracionv() {
			return getRuleContext(DeclaracionvContext.class,0);
		}
		public AsignacionvContext asignacionv() {
			return getRuleContext(AsignacionvContext.class,0);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitVariables(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variables);
		try {
			setState(104);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
			case DOUBLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				declaracionv();
				}
				break;
			case COMA:
			case PUNTOYCOMA:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				asignacionv();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SemiContext extends ParserRuleContext {
		public TerminalNode PUNTOYCOMA() { return getToken(TP2Parser.PUNTOYCOMA, 0); }
		public SemiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterSemi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitSemi(this);
		}
	}

	public final SemiContext semi() throws RecognitionException {
		SemiContext _localctx = new SemiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_semi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionvContext extends ParserRuleContext {
		public TipovarContext tipovar() {
			return getRuleContext(TipovarContext.class,0);
		}
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public SemiContext semi() {
			return getRuleContext(SemiContext.class,0);
		}
		public DeclaracionvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterDeclaracionv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitDeclaracionv(this);
		}
	}

	public final DeclaracionvContext declaracionv() throws RecognitionException {
		DeclaracionvContext _localctx = new DeclaracionvContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracionv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			tipovar();
			setState(109);
			lista();
			setState(110);
			semi();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipovarContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(TP2Parser.INT, 0); }
		public TerminalNode CHAR() { return getToken(TP2Parser.CHAR, 0); }
		public TerminalNode DOUBLE() { return getToken(TP2Parser.DOUBLE, 0); }
		public TipovarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipovar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterTipovar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitTipovar(this);
		}
	}

	public final TipovarContext tipovar() throws RecognitionException {
		TipovarContext _localctx = new TipovarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipovar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << CHAR) | (1L << DOUBLE))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TP2Parser.ID, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public TerminalNode COMA() { return getToken(TP2Parser.COMA, 0); }
		public TipovarContext tipovar() {
			return getRuleContext(TipovarContext.class,0);
		}
		public ListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterLista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitLista(this);
		}
	}

	public final ListaContext lista() throws RecognitionException {
		ListaContext _localctx = new ListaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lista);
		int _la;
		try {
			setState(127);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(ID);
				setState(115);
				asignacion();
				setState(116);
				lista();
				}
				break;
			case COMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(COMA);
				setState(120);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << CHAR) | (1L << DOUBLE))) != 0)) {
					{
					setState(119);
					tipovar();
					}
				}

				setState(122);
				match(ID);
				setState(123);
				asignacion();
				setState(124);
				lista();
				}
				break;
			case PUNTOYCOMA:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public AssignModeContext assignMode() {
			return getRuleContext(AssignModeContext.class,0);
		}
		public ExpSimpleContext expSimple() {
			return getRuleContext(ExpSimpleContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitAsignacion(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_asignacion);
		try {
			setState(133);
			switch (_input.LA(1)) {
			case MASIGUAL:
			case MENOSIGUAL:
			case PORIGUAL:
			case BARRAIGUAL:
			case MODULOIGUAL:
			case IGUAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				assignMode();
				setState(130);
				expSimple(0);
				}
				break;
			case COMA:
			case PUNTOYCOMA:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignModeContext extends ParserRuleContext {
		public TerminalNode MASIGUAL() { return getToken(TP2Parser.MASIGUAL, 0); }
		public TerminalNode MENOSIGUAL() { return getToken(TP2Parser.MENOSIGUAL, 0); }
		public TerminalNode PORIGUAL() { return getToken(TP2Parser.PORIGUAL, 0); }
		public TerminalNode BARRAIGUAL() { return getToken(TP2Parser.BARRAIGUAL, 0); }
		public TerminalNode MODULOIGUAL() { return getToken(TP2Parser.MODULOIGUAL, 0); }
		public TerminalNode IGUAL() { return getToken(TP2Parser.IGUAL, 0); }
		public AssignModeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignMode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterAssignMode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitAssignMode(this);
		}
	}

	public final AssignModeContext assignMode() throws RecognitionException {
		AssignModeContext _localctx = new AssignModeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assignMode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MASIGUAL) | (1L << MENOSIGUAL) | (1L << PORIGUAL) | (1L << BARRAIGUAL) | (1L << MODULOIGUAL) | (1L << IGUAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TP2Parser.ID, 0); }
		public AssignModeContext assignMode() {
			return getRuleContext(AssignModeContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode MASMAS() { return getToken(TP2Parser.MASMAS, 0); }
		public TerminalNode MENOSMENOS() { return getToken(TP2Parser.MENOSMENOS, 0); }
		public ExpSimpleContext expSimple() {
			return getRuleContext(ExpSimpleContext.class,0);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitExpresion(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expresion);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(ID);
				setState(138);
				assignMode();
				setState(139);
				expresion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(ID);
				setState(142);
				match(MASMAS);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				match(ID);
				setState(144);
				match(MENOSMENOS);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				expSimple(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpSimpleContext extends ParserRuleContext {
		public ExprANDContext exprAND() {
			return getRuleContext(ExprANDContext.class,0);
		}
		public ExpSimpleContext expSimple() {
			return getRuleContext(ExpSimpleContext.class,0);
		}
		public TerminalNode OR() { return getToken(TP2Parser.OR, 0); }
		public ExpSimpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expSimple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).enterExpSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TP2Listener ) ((TP2Listener)listener).exitExpSimple(this);
		}
	}

	public final ExpSimpleContext expSimple() throws RecognitionException {
		return expSimple(0);
	}
